--- a/controllers/module/post/css/comment.reply.form.css
+++ b/controllers/module/post/css/comment.reply.form.css
@@ -9,9 +9,33 @@
 	border: 1px solid #465a69;
 	padding: 4px 7px;
 	color: #ffffff;
-	float: right;
 }
 
 .comment-reply-write-form input[type='submit']:hover, .comment-reply-write-form input[type='reset']:hover {
 	background-color: #465a69 !important;
+}
+
+
+.comment-reply-write-form .comment-extra-info-box {
+	border: 1px solid #666666;
+	padding: 10px;
+	border-radius: 3px;
+	margin-bottom: 10px;
+}
+
+.comment-reply-write-form .comment-extra-info-box > .row {
+	margin-bottom: 5px;
+}
+
+.comment-reply-write-form .comment-extra-info-box > .row > .sub-title {
+	display:inline-block;
+	padding: 5px 10px;
+	width: 70px;
+	font-family: dotum;
+	margin-right: 5px;
+	color: #666666;
+}
+
+.comment-reply-write-form .comment-extra-info-box > .row input[type='text'], .comment-reply-write-form .comment-extra-info-box > .row input[type='password'] {
+	padding: 5px 10px;
 }
