adding ip security login and post list bottom search skin and so on

--- a/controllers/module/post/css/move_post_id_sel.css
+++ b/controllers/module/post/css/move_post_id_sel.css
@@ -1,3 +1,6 @@
+#move-post-sel {
+	margin: 10px 0 10px 0;
+}
 #move-post-sel > #move-select-all {
 	display:inline-block;
 	background-color: #6d899e;
