--- a/view/skin/login/default/css/main.css
+++ b/view/skin/login/default/css/main.css
@@ -1,14 +1,14 @@
 #login_skin {
 	border: 1px solid #313131;
 	padding: 10px;
-	height: 105px;
+	height: 125px;
 	border-radius: 2px;
 	overflow: hidden;
 }
 
 @-moz-document url-prefix() {  /* 파이어폭스 */
 	#login_skin {
-		height: 112px;
+		height: 134px;
 	}
 }
 
@@ -16,16 +16,15 @@
 #login_skin #login-skin-top {
 	margin-bottom: 3px;
 }
-
-#login_skin a, #login_skin #auto-login {
+#login_skin a, #login_skin #login-bottom-left {
 	text-decoration: none;
 	color: #394454;
 	font-family: '맑은 고딕', AppleGothic;
 }
 
-#login_skin #auto-login  {
-	position: relative;
-	top: 3px;
+#login_skin #login-bottom-left {
+	float: left;
+	margin-top: 2px;
 }
 
 #login_skin a, #login_skin #auto-login input[type='checkbox'] {
@@ -89,10 +88,15 @@
 	background-color: #465a69;
 }
 
+#login_skin #login-button {
+	height: 40px;
+	margin-top: 4px;
+}
+
 #login_skin #logout-button {
 	margin-top: 5px;
 }
 #login_skin #logout-button input[type='submit'] {
-	padding: 3px 0;
+	padding: 5px 0;
 	width: 200px;
 }
