--- a/view/index/default/css/top.css
+++ b/view/index/default/css/top.css
@@ -3,7 +3,9 @@
 	line-height: 25px;
 	background-color: #eaeaea;
 	padding: 0 10px;
-	border-bottom: 1px solid #d5d5d5;
+	border: 1px solid #d5d5d5;
+	border-top: 0;
+	border-radius: 2px;
 	margin-bottom: 10px;
 }
 
