--- a/view/skin/message_view/default/css/main.css
+++ b/view/skin/message_view/default/css/main.css
@@ -1,7 +1,10 @@
+#message-view-skin {
+	padding: 10px;
+}
 #message-view-skin #left{
 	border-right: 1px solid #b4b4b4;
 	margin-right: 10px;
-	padding: 0 10px;
+	padding-right: 10px;
 	height: 550px;
 }
 
