--- a/view/skin/search_form/default/css/main.css
+++ b/view/skin/search_form/default/css/main.css
@@ -1,4 +1,4 @@
-#search-form-skin {
+#search-form-skin-default {
 	border: 1px solid #d5d5d5;
 	padding: 10px;
 	border-radius: 3px;
@@ -6,7 +6,7 @@
 	position: relative;
 }
 
-#search-form-skin > #title {
+#search-form-skin-default > #title {
 	background-color: #496380;
 	color: #ffffff;
 	display: inline-block;
@@ -16,11 +16,11 @@
 	left: -5px;
 }
 
-#search-form-skin #keyword-search {
+#search-form-skin-default #keyword-search {
 	margin-top: 5px;
 }
 
-#search-form-skin input[type='submit'] {
+#search-form-skin-default input[type='submit'] {
 	display:inline-block;
 	background-color: #6d899e;
 	border: 1px solid #465a69;
@@ -33,21 +33,21 @@
 }
 
 @-moz-document url-prefix() {  /* 파이어폭스 */
-	#search-form-skin input[type='submit'] {
+	#search-form-skin-default input[type='submit'] {
 		top: 0;
 	}
 }
 
-#search-form-skin input[type='submit']:hover {
+#search-form-skin-default input[type='submit']:hover {
 	background-color: #465a69;
 }
 
-#search-form-skin input[type='text'], #search-form-skin select {
+#search-form-skin-default input[type='text'], #search-form-skin-default select {
 	padding: 5px 10px;
 	border: 1px solid #666666;
 	border-radius: 3px;
 }
 
-#search-form-skin input[name='key'] {
+#search-form-skin-default input[name='key'] {
 	width: 74%;
 }
