--- a/view/skin/search_paging/default/css/main.css
+++ b/view/skin/search_paging/default/css/main.css
@@ -5,18 +5,24 @@
 }
 .paging a {
 	text-decoration: none;
-	font-size: 8.7pt;
+	font-size: 9pt;
 	color: #666666;
 	border: 1px solid #d5d5d5;
 	display: inline-block;
-	padding: 2px;
+	padding: 5px;
 	border-radius: 2px;
 	margin-left: 3px;
 	text-align: center;
 }
 .paging a:hover, .paging .selected {
-	border: 1px solid orange;
+	border: 1px solid #465a69;
+	background-color: #6d899e;
+	color: #ffffff;
+}
+
+.paging a:hover {
+	text-decoration: none;
 }
 .paging .page_no {
-	width: 15px;
+	min-width: 20px;
 }
