--- a/view/skin/vote/default/css/main.css
+++ b/view/skin/vote/default/css/main.css
@@ -17,3 +17,9 @@
 #vote-skin > a:hover {
 	background-color: #465a69;
 }
+
+@media all and (max-width: 550px) {
+	#vote-skin {
+		display: none;
+	}
+}
