--- a/view/skin/post_list_search_form/default/css/main.css
+++ b/view/skin/post_list_search_form/default/css/main.css
@@ -56,3 +56,10 @@
 #post-list-search-form-skin table tr td input[type='submit']:hover {
 	background-color: #465a69;
 }
+
+
+@media all and (max-width: 700px) { 
+	#post-list-search-form-skin {
+		display: none;
+	}
+}
