--- a/view/skin/ip_sec_level/default/css/main.css
+++ b/view/skin/ip_sec_level/default/css/main.css
@@ -2,6 +2,7 @@
 	padding: 10px;
 	position: relative;
 	height: 200px;
+	font-size: 9pt;
 }
 #ip-sec-level-skin > #title{
 	text-shadow: 1px 1px 1px #1c1d52;
