--- a/view/skin/post_latest/default/css/main.css
+++ b/view/skin/post_latest/default/css/main.css
@@ -1,24 +1,25 @@
-#post-latest-default-skin {
+.post-latest-default-skin {
 	border: 1px solid #666666;
 	padding: 10px;
 	border-radius: 3px;
 }
 
-#post-latest-default-skin  > #title {
+.post-latest-default-skin  > #title {
 	border-bottom: 1px solid #666666;
 	padding-bottom: 5px;
 	margin-bottom: 10px;
 }
 
-#post-latest-default-skin  > #title a {
+.post-latest-default-skin  > #title a {
 	text-decoration: none;
 	font-size: 10pt;
 	color: #303562;
 	font-weight: bold;
 	font-family: '맑은 고딕', AppleGothic;
+	text-shadow: 1px 1px 1px #2f324b; 
 }
 
-#post-latest-default-skin > .row a {
+.post-latest-default-skin > .row a {
 	text-decoration: none;
 	color: #444444;
 	line-height: 17px;
@@ -28,10 +29,10 @@
 	display: inline-block;
 }
 
-#post-latest-default-skin > .row a:hover {
+.post-latest-default-skin > .row a:hover {
 	text-decoration: underline;
 }
 
-#post-latest-default-skin > .row .secret {
+.post-latest-default-skin > .row .secret {
 	color: #722121;
 }
