--- a/controllers/module/member/css/find_username_password.css
+++ b/controllers/module/member/css/find_username_password.css
@@ -5,6 +5,7 @@
 	font-family: '맑은 고딕', AppleGothic;
 	position: relative;
 	margin-left: 5px;
+	margin-top: 10px;
 }
 
 #find-username-password > #title {
