--- a/view/skin/post_list_search_form/default/css/main.css
+++ b/view/skin/post_list_search_form/default/css/main.css
@@ -4,6 +4,7 @@
 	border: 1px solid #666666;
 	line-height: 35px;
 	padding: 10px 10px 2px 10px;
+	white-space: nowrap;
 }
 
 #post-list-search-form-skin > #title-wrapper {
@@ -26,19 +27,24 @@
 	height: 22px;
 	line-height: 22px;
 	padding: 0 5px;
-	width: 120px;
+	width: 90px;
 }
 
 #post-list-search-form-skin table tr td select {
 	height: 23px;
 	line-height: 23px;
+	width: 95px;
 }
+#post-list-search-form-skin table tr td select[name='search_op'] {
+	width: 60px;
+}
+
 
 #post-list-search-form-skin table tr td input[type='submit'] {
 	display:inline-block;
 	background-color: #6d899e;
 	border: 1px solid #465a69;
-	padding: 0 30px;
+	padding: 0 20px;
 	color: #ffffff;
 	cursor: pointer;
 	font-family: dotum;
