fixing download.php

--- a/controllers/module/post/css/view.css
+++ b/controllers/module/post/css/view.css
@@ -1,4 +1,4 @@
-/* ÆÄÀÏ ¾÷·Îµå */
+/* íŒŒì¼ ì—…ë¡œë“œ */
 .content-file-info  {
 	border: 1px solid #d5d5d5;
 	display: inline-block;
@@ -9,7 +9,7 @@
 	font-size: 9pt;
 }
 .content-file-info .content-filename {
-	font-family: '¸¼Àº °íµñ', AppleGothic;
+	font-family: 'ë§‘ì€ ê³ ë”•', AppleGothic;
 }
 
 .content-file-info .file-download {
